feat : downloadable xl file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
         
 </head>
 <body>
-    <h1>Salary Increment Calculator</h1>
+    <header class="app-header">
+        <div class="container header-inner">
+            <div class="brand">
+                <span class="logo" aria-hidden="true">💼</span>
+                <div class="brand-text">
+                    <h1 class="app-title">SalarySync</h1>
+                    <p class="subtitle">Salary Increment Calculator</p>
+                </div>
+            </div>
+            <div class="header-actions">
+                <a class="btn btn-primary" href="header.xlsx" download>
+                    Download header.xlsx
+                </a>
+            </div>
+        </div>
+    </header>
     <!-- Secure Sharing (Supabase) -->
     <div id="secureSharing" style="background:#1e1e1e;padding:12px;border-radius:8px;margin:12px 0;">
         <h2>Secure Sharing</h2>
