--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
         </div>
     </div>
     
+    <!-- How to Use Instructions -->
+    <div id="howToUse" class="card" style="display:none;">
+        <h2>How to Use SalarySync</h2>
+        <ol>
+            <li><strong>Download header.xlsx</strong> from the header and open it to see required columns.</li>
+            <li><strong>Prepare your Excel</strong> with columns:
+                Employee Code, Employee Name, Location, Rating, Department, Current Salary.</li>
+            <li><strong>Go to Calculator</strong> tab and <strong>Upload</strong> your file in Step 1.</li>
+            <li><strong>Step 2</strong>: Choose increment method (Location-based or Uniform) and enter percentages.</li>
+            <li><strong>Step 3</strong>: Enter rating-based percentages for each rating used in your file.</li>
+            <li><strong>Step 4</strong>: Optionally distribute department funds (even, by % or by amount).</li>
+            <li><strong>Step 5</strong>: Review results and <strong>Download Updated File</strong>.</li>
+            <li><strong>Secure Sharing</strong> tab: Sign in and upload the final file to generate a signed link.</li>
+        </ol>
+        <p style="color:#a8a8a8;margin-top:8px;">Tip: You can return to any step using the progress bar.</p>
+    </div>
+    
     <!-- Step 1: File Upload -->
     <div id="step1" class="step active">
         <h2>Step 1: Upload Excel File</h2>
